Update header of contest page

--- a/resources/assets/less/bem/header-v4.less
+++ b/resources/assets/less/bem/header-v4.less
@@ -115,6 +115,11 @@
       }
     }
 
+    .@{_top}--contests & {
+      .at2x-simple('/images/headers/contest.jpg');
+      opacity: 0.7;
+    }
+
     .@{_top}--download & {
       .at2x-simple('/images/headers/download.jpg');
       opacity: 0.8;
