--- a/resources/assets/less/bem/osu-page.less
+++ b/resources/assets/less/bem/osu-page.less
@@ -146,8 +146,9 @@
   }
 
   &--contest {
+    .default();
+
     @media @desktop {
-      .page-width-desktop(20px);
       margin-bottom: 10px;
     }
   }
