--- a/resources/assets/less/bem/contest.less
+++ b/resources/assets/less/bem/contest.less
@@ -22,13 +22,15 @@
   color: white;
 
   &__description {
+    .default-gutter-v2();
     .content-font();
 
     background-color: @osu-colour-b4;
     color: white;
     font-size: 14px;
     font-weight: 300;
-    padding: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
     .default-box-shadow();
 
 
