--- a/resources/assets/less/bem/header-v4.less
+++ b/resources/assets/less/bem/header-v4.less
@@ -155,6 +155,10 @@
       .at2x-simple('/images/headers/supporter.jpg');
     }
 
+    .@{_top}--tournaments & {
+      .at2x-simple('/images/headers/tournament-v2.jpg');
+    }
+
     .@{_top}--users & {
       opacity: 1;
       .at2x-simple('/images/headers/supporter.jpg');
