Fix back missing margin

--- a/resources/assets/less/bem/tournament.less
+++ b/resources/assets/less/bem/tournament.less
@@ -20,6 +20,10 @@
   @_top: tournament;
   background-color: @osu-colour-b5;
 
+  @media @desktop {
+    margin-bottom: 10px;
+  }
+
   &__body {
     .center-content();
     display: flex;
