Update header of ranking page

--- a/resources/assets/less/bem-index.less
+++ b/resources/assets/less/bem-index.less
@@ -287,8 +287,8 @@
 @import "bem/quick-search-input";
 @import "bem/quick-search-items";
 @import "bem/quick-search-result";
+@import "bem/ranking-country-filter";
 @import "bem/ranking-page";
-@import "bem/ranking-page-header";
 @import "bem/ranking-page-table";
 @import "bem/rankings-beatmapsets";
 @import "bem/report-form";
