--- a/resources/assets/less/bem/header-v4.less
+++ b/resources/assets/less/bem/header-v4.less
@@ -146,6 +146,10 @@
       opacity: 0.7;
     }
 
+    .@{_top}--rankings & {
+      .at2x-simple('/images/headers/rankings.jpg');
+    }
+
     .@{_top}--search & {
       .at2x-simple('/images/headers/search.jpg');
     }
