--- a/resources/assets/less/bem/ranking-country-filter.less
+++ b/resources/assets/less/bem/ranking-country-filter.less
@@ -16,30 +16,13 @@
  *    along with osu!web.  If not, see <http://www.gnu.org/licenses/>.
  */
 
- .spotlight-info {
-  .default-gutter-v2();
+.ranking-country-filter {
   display: flex;
-  justify-content: flex-end;
+  align-items: center;
+  margin-bottom: 10px;
 
-  padding-top: 10px;
-  padding-bottom: 10px;
-
-  color: @osu-colour-c1;
-  background-color: @osu-colour-b3;
-
-  &__items {
+  &__flag {
+    margin: 0 5px;
     display: flex;
-    justify-content: flex-end;
-
-    margin: -5px;
-    padding: 5px;
-  }
-
-  &__item {
-    padding: 5px;
-  }
-
-  &__item-header {
-    font-size: @font-size--normal;
   }
 }
