Unify counter (info) boxes

--- a/resources/assets/less/bem-index.less
+++ b/resources/assets/less/bem-index.less
@@ -179,6 +179,7 @@
 @import "bem/header-v4";
 @import "bem/icon-fancy";
 @import "bem/icon-stack";
+@import "bem/items";
 @import "bem/js-accordion";
 @import "bem/js-flash-border";
 @import "bem/js-react-modal";
@@ -308,7 +309,6 @@
 @import "bem/simple-form";
 @import "bem/simple-menu";
 @import "bem/sort";
-@import "bem/spotlight-info";
 @import "bem/spotlight-select-options";
 @import "bem/stacked-bar-chart";
 @import "bem/status-chart";
