Update header of multi matches page

--- a/resources/assets/less/bem/header-v4.less
+++ b/resources/assets/less/bem/header-v4.less
@@ -137,6 +137,10 @@
       .at2x-simple("/images/headers/wiki.jpg");
     }
 
+    .@{_top}--mp-history & {
+      .at2x-simple('/images/headers/mp-history.jpg');
+    }
+
     .@{_top}--news & {
       .at2x-simple('/images/headers/news.png');
     }
