--- a/resources/assets/less/bem/search-forum-options.less
+++ b/resources/assets/less/bem/search-forum-options.less
@@ -17,8 +17,8 @@
  */
 
 .search-forum-options {
-  margin: -10px 0;
-  padding: 20px 0;
+  margin: 0;
+  padding: 10px 0;
   display: flex;
   flex-direction: column;
 
