--- a/resources/assets/less/bem/beatmap-packs-header.less
+++ b/resources/assets/less/bem/beatmap-packs-header.less
@@ -23,7 +23,7 @@
   font-weight: 300;
   line-height: 1.3;
   text-align: center;
-  background-color: @osu-colour-b6;
+  background-color: @osu-colour-d3;
 
   &__important {
     font-size: 110%;
