Less header cake

--- a/resources/assets/less/bem/osu-page.less
+++ b/resources/assets/less/bem/osu-page.less
@@ -159,7 +159,7 @@
 
   &--description {
     .default-gutter-v2();
-    background-color: @osu-colour-b4;
+    background-color: @osu-colour-d4;
     color: @osu-colour-c1;
     font-size: @font-size--title-small;
     padding-top: 20px;
@@ -261,7 +261,7 @@
     .default-gutter-v2();
     padding-top: 5px;
     padding-bottom: 5px;
-    background-color: @osu-colour-b3;
+    background-color: @osu-colour-d4;
     display: flex;
     justify-content: flex-end;
   }
