--- a/resources/assets/less/bem/beatmapset-panel.less
+++ b/resources/assets/less/bem/beatmapset-panel.less
@@ -118,6 +118,10 @@
     background-image: linear-gradient(to bottom, fade(#000, 10%), fade(#000, 70%));
   }
 
+  &__link {
+    .link-blue-dark();
+  }
+
   &__mapper-source-box {
     font-size: 70%;
     font-weight: 600;
