--- a/resources/assets/less/bem/grid.less
+++ b/resources/assets/less/bem/grid.less
@@ -37,8 +37,10 @@
   }
 
   &--gutters {
-    margin-left: -@flex-grid--gutter-width;
-    margin-right: -@flex-grid--gutter-width;
+    @media @desktop {
+      margin-left: -@flex-grid--gutter-width;
+      margin-right: -@flex-grid--gutter-width;
+    }
   }
 
   &--packed {
