--- a/resources/assets/less/bem/store-order.less
+++ b/resources/assets/less/bem/store-order.less
@@ -28,7 +28,8 @@
   .default-border-radius();
 
   margin-bottom: 10px;
-  padding: 10px;
+  padding: 10px 20px;
+  background-color: @osu-colour-b4;
 
   .colors(@status) {
     @color-name: "store-order--status-@{status}";
