--- a/resources/assets/less/bem/store-slider.less
+++ b/resources/assets/less/bem/store-slider.less
@@ -22,11 +22,16 @@
   @preset-margin: 4px;
   @preset-width: 36px;
   @callout-padding: 6px;
-  @callout-extension: 64px;
+  @callout-extension: 32px;
 
   // inset slider to prevent overflows making the page wider.
   // the 2px is to add a gap between the callout and the page edge.
   padding: 0 ((@callout-extension / 2) - (@callout-padding * 2) + 2px);
+  padding: 0 (@slider-callout--width / 2 - @gutter-v2 + 2px);
+
+  @media @desktop {
+    padding: 0 ((@slider-callout--width + @callout-extension) / 2 - @gutter-v2-desktop + 2px);
+  }
 
   &__bigtext { // stupid name
     font-size: @font-size--large;
@@ -42,8 +47,8 @@
   }
 
   &__callout {
-    background-color: #333;
-    color: #fff;
+    background-color: @osu-colour-b3;
+    color: @osu-colour-c1;
     font-size: @font-size--normal;
     text-align: center;
     border-radius: 10px;
@@ -68,14 +73,14 @@
     }
 
     &::after {
-      border-top-color: #333;
+      border-top-color: @osu-colour-b3;
       border-width: @slider-callout--arrow-height;
       margin-left: -@slider-callout--arrow-height;
     }
   }
 
   &__preset {
-    background-color: #666;
+    background-color: @osu-colour-b3;
     color: #fff;
     cursor: pointer;
     margin: @preset-margin;
@@ -86,7 +91,7 @@
     border-radius: 10px;
 
     .js-store--disabled & {
-      background-color: #999;
+      background-color: @osu-colour-b1;
       pointer-events: none;
       cursor: default;
     }
@@ -94,7 +99,7 @@
     &.js-slider-preset--active {
       background-color: @pink-darker;
       .js-store--disabled & {
-        background-color: #999;
+        background-color: @osu-colour-b1;
       }
     }
   }
@@ -110,14 +115,14 @@
 
   &__subtext { // stupid name
     margin-top: 2px;
-    color: #999;
+    color: @osu-colour-c2;
   }
 
   .ui-slider {
-    background-color: darkgray;
+    background-color: @osu-colour-b3;
     .js-store--disabled & {
       .ui-slider-handle, .ui-slider-range {
-        background-color: #999;
+        background-color: @osu-colour-b1;
       }
     }
     .ui-slider-range {
