--- a/resources/assets/less/bem/store-supporter-tag.less
+++ b/resources/assets/less/bem/store-supporter-tag.less
@@ -21,15 +21,11 @@
     .reset-input();
     .default-border-radius();
 
-    background-color: #eee;
-    color: #333;
+    background-color: @osu-colour-b3;
+    color: @osu-colour-c1;
     padding: 4px 8px;
     text-align: center;
     width: 100%;
-
-    &::placeholder {
-      font-style: italic;
-    }
   }
 
   &__user-search {
