--- a/resources/assets/less/bem/store-text.less
+++ b/resources/assets/less/bem/store-text.less
@@ -32,6 +32,29 @@
 
   &--header {
     margin-top: 8px;
-    color: @pink-dark;
+    color: @osu-colour-h1;
+  }
+
+  &--price {
+    color: @pink-text;
+    font-weight: bold;
+    font-size: @font-size--title;
+    margin-bottom: 0;
+  }
+
+  &--price-note {
+    font-weight: 700;
+  }
+
+  &--title {
+    font-style: normal;
+    font-size: @font-size--title;
+    font-weight: 600;
+    margin: 0 0 20px;
+    color: @osu-colour-h1;
+  }
+
+  &--title-small {
+    font-size: @font-size--large;
   }
 }
