--- a/resources/assets/less/bem-index.less
+++ b/resources/assets/less/bem-index.less
@@ -20,6 +20,8 @@
 @import "bem/account-edit-entry";
 @import "bem/account-edit-status";
 @import "bem/account-verification-message";
+@import "bem/address";
+@import "bem/address-list";
 @import "bem/admin-contest";
 @import "bem/admin-contest-entry";
 @import "bem/admin-menu";
@@ -101,6 +103,7 @@
 @import "bem/btn-osu-lite";
 @import "bem/build";
 @import "bem/builds";
+@import "bem/cart-items";
 @import "bem/changelog-chart";
 @import "bem/changelog-entry";
 @import "bem/chat";
@@ -232,6 +235,7 @@
 @import "bem/oauth-client-details";
 @import "bem/oauth-clients";
 @import "bem/oauth-scopes";
+@import "bem/order-line-items";
 @import "bem/osu-layout";
 @import "bem/osu-md";
 @import "bem/osu-nav";
@@ -323,11 +327,14 @@
 @import "bem/store-notification-requested-alert";
 @import "bem/store-order";
 @import "bem/store-order-item";
+@import "bem/store-page";
 @import "bem/store-payment-button";
 @import "bem/store-payment-method";
+@import "bem/store-products";
 @import "bem/store-slider";
 @import "bem/store-supporter-tag";
 @import "bem/store-text";
+@import "bem/store-transaction-info";
 @import "bem/store-xsolla";
 @import "bem/support-osu-popup";
 @import "bem/supporter";
@@ -390,3 +397,4 @@
 @import "bem/bootstrap/modal-content";
 @import "bem/bootstrap/modal-dialog";
 @import "bem/bootstrap/modal-header";
+@import "bem/bootstrap/table";
