--- a/resources/assets/less/bem/bootstrap/table.less
+++ b/resources/assets/less/bem/bootstrap/table.less
@@ -16,41 +16,52 @@
  *    along with osu!web.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-.store-payment-method {
-  display: grid;
-  grid-gap: 5px 20px;
-  margin-bottom: 20px;
+.table {
+  @_top: table;
 
-  @media @desktop {
-    grid-template-columns: 1fr 1fr;
+  margin-top: 20px;
+
+  &--store-orders-checkout {
+    margin-top: 20px;
+    font-style: italic;
+    font-size: @font-size--title-small-3;
   }
 
-  &__cell {
-    text-align: center;
+  > * > tr > td {
+    width: 100px;
 
-    @media @desktop {
-      text-align: start;
+    &:first-child {
+      width: auto;
+    }
+
+    .@{_top}--store-orders-checkout& {
+      border: none;
+      padding-left: 0;
+      padding-right: 0;
     }
   }
 
-  &__provider {
-    height: 20px;
-    margin: 4px 4px 4px 0;
+  > tfoot > tr > td {
+    .@{_top}--store-orders-checkout& {
+      color: @osu-colour-c2;
 
-    // stop the bitcash icon from flying around
-    &:last-child {
-      margin-right: 0;
+      &:first-child {
+        text-transform: lowercase;
+      }
     }
+  }
 
-    &--light {
-      height: 30px;
-      padding: 5px 10px;
-      background-color: @osu-colour-c1;
-      border-radius: @border-radius-large;
+  .warning > td {
+    .@{_top}--store-orders-checkout& {
+      background-color: transparent;
     }
+  }
 
-    &--tall {
-      height: 30px;
+  &__total {
+    font-weight: 700;
+
+    .@{_top}--store-orders-checkout & {
+      display: none;
     }
   }
 }
