--- a/resources/assets/less/bem/grid-cell.less
+++ b/resources/assets/less/bem/grid-cell.less
@@ -40,8 +40,10 @@
   }
 
   .grid--gutters > & {
-    padding-left: @flex-grid--gutter-width;
-    padding-right: @flex-grid--gutter-width;
+    @media @desktop {
+      padding-left: @flex-grid--gutter-width;
+      padding-right: @flex-grid--gutter-width;
+    }
   }
 
   .grid--row-gaps > & {
