--- a/resources/assets/less/bem/store-order-item.less
+++ b/resources/assets/less/bem/store-order-item.less
@@ -19,48 +19,51 @@
 .store-order-item {
   .default-border-radius();
   .default-box-shadow();
-  list-style: none;
   padding: 10px;
-  margin: 0 0 5px;
+  background-color: @osu-colour-b4;
+  display: grid;
+  gap: 10px;
+  align-items: baseline;
+  grid-template-areas: "name name" "quantity delete" "subtotal subtotal";
+  grid-template-columns: 1fr auto;
+  font-size: @font-size--title-small;
 
-  @media @desktop {
-    flex-wrap: nowrap;
+  @media @narrow-up {
+    grid-template-areas: "name quantity subtotal delete";
+    grid-template-columns: 1fr 150px 100px 35px;
+    grid-template-rows: auto;
   }
 
-  &__error {
-    list-style: none;
+  @media @desktop {
+    font-size: inherit;
   }
 
   &__errors {
     color: @red;
+    list-style: none;
+    grid-column-start: 1;
+    grid-column-end: -1;
+    order: 10;
   }
 
-  &__line {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-
-    @media @narrow {
-      flex-direction: column;
-    }
-  }
-
-  &__options {
-    display: flex;
-    align-self: flex-end;
-    justify-content: flex-end;
+  &__delete {
+    grid-area: delete;
+    text-align: right;
   }
 
   &__quantity {
-    min-width: 100px;
+    grid-area: quantity;
   }
 
   &__name {
-    align-self: flex-start;
+    grid-area: name;
   }
 
   &__subtotal {
-    min-width: 150px;
-    padding: 0 20px;
+    grid-area: subtotal;
+
+    @media @desktop {
+      text-align: right;
+    }
   }
 }
