--- a/resources/assets/less/bem/store-page.less
+++ b/resources/assets/less/bem/store-page.less
@@ -16,41 +16,29 @@
  *    along with osu!web.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-.store-payment-method {
-  display: grid;
-  grid-gap: 5px 20px;
-  margin-bottom: 20px;
+.store-page {
+  .default-gutter-v2();
+  padding-top: 20px;
+  padding-bottom: $padding-top;
+  font-size: @font-size--title-small;
 
-  @media @desktop {
-    grid-template-columns: 1fr 1fr;
+  & + & {
+    .inner-shadow-top();
   }
 
-  &__cell {
-    text-align: center;
-
-    @media @desktop {
-      text-align: start;
-    }
+  &--footer {
+    background-color: @osu-colour-b4;
   }
 
-  &__provider {
-    height: 20px;
-    margin: 4px 4px 4px 0;
-
-    // stop the bitcash icon from flying around
-    &:last-child {
-      margin-right: 0;
-    }
-
-    &--light {
-      height: 30px;
-      padding: 5px 10px;
-      background-color: @osu-colour-c1;
-      border-radius: @border-radius-large;
-    }
-
-    &--tall {
-      height: 30px;
-    }
+  &__alert {
+    border-radius: @border-radius-large;
+    background-color: osu-hsla(@osu-colour-red-2, 30%);
+    color: @osu-colour-c1;
+    font-weight: 600;
+    padding: 10px;
+    margin: 0;
+    list-style: none;
+    display: grid;
+    grid-gap: 5px;
   }
 }
