--- a/resources/assets/less/variables.less
+++ b/resources/assets/less/variables.less
@@ -29,7 +29,8 @@
 @screen-mobile-max: (@screen-sm-min - 1px);
 @desktop: ~"(min-width: @{screen-sm-min})";
 @mobile: ~"(max-width: @{screen-mobile-max})";
-@narrow: ~"(max-width: 480px)";
+@narrow: ~"(max-width: 479px)";
+@narrow-up: ~"(min-width: 480px)";
 
 @highdpi: ~"(-webkit-min-device-pixel-ratio: 1.5), (min--moz-device-pixel-ratio: 1.5), (-o-min-device-pixel-ratio: 3/2), (min-resolution: 1.5dppx)";
 
