Add missing icons

--- a/resources/assets/less/bem/header-v4.less
+++ b/resources/assets/less/bem/header-v4.less
@@ -194,9 +194,14 @@
     margin-right: 10px;
     flex: none;
 
+    .@{_top}--artists & {
+      background-image: url('/images/icons/artists.svg');
+      background-size: 75%;
+    }
+
     .@{_top}--beatmappacks & {
-      .at2x-simple('/images/headers/beatmappacks-icon.png');
-      background-size: 80%;
+      background-image: url('/images/icons/beatmappacks.svg');
+      background-size: 75%;
     }
 
     .@{_top}--changelog & {
@@ -211,12 +216,32 @@
       background-image: url('/images/icons/chat.svg');
     }
 
+    .@{_top}--contests & {
+      background-image: url('/images/icons/contests.svg');
+      background-size: 75%;
+    }
+
     .@{_top}--news & {
       background-image: url('/images/icons/news.svg');
     }
 
+    .@{_top}--rankings & {
+      background-image: url('/images/icons/rankings.svg');
+      background-size: 75%;
+    }
+
+    .@{_top}--search & {
+      background-image: url('/images/icons/search.svg');
+      background-size: 75%;
+    }
+
     .@{_top}--users & {
       background-image: url('/images/icons/profile.svg');
+    }
+
+    .@{_top}--wiki & {
+      background-image: url('/images/icons/wiki.svg');
+      background-size: 75%;
     }
   }
 
