--- a/resources/assets/less/bem/header-v4.less
+++ b/resources/assets/less/bem/header-v4.less
@@ -221,6 +221,11 @@
       background-size: 75%;
     }
 
+    .@{_top}--help & {
+      background-image: url('/images/icons/help.svg');
+      background-size: 75%;
+    }
+
     .@{_top}--news & {
       background-image: url('/images/icons/news.svg');
     }
@@ -237,11 +242,6 @@
 
     .@{_top}--users & {
       background-image: url('/images/icons/profile.svg');
-    }
-
-    .@{_top}--wiki & {
-      background-image: url('/images/icons/wiki.svg');
-      background-size: 75%;
     }
   }
 
