No space between sections

--- a/resources/assets/less/bem/artist.less
+++ b/resources/assets/less/bem/artist.less
@@ -97,6 +97,12 @@
     > h1, h2, h3, h4, h5, h6 {
       color: white;
     }
+
+    &--index {
+      @media @desktop {
+        margin-bottom: 0;
+      }
+    }
   }
 
   &__portrait-wrapper {
