--- a/resources/assets/less/bem/osu-page.less
+++ b/resources/assets/less/bem/osu-page.less
@@ -166,6 +166,15 @@
     padding-bottom: 20px;
   }
 
+  &--description-extra {
+    .default-gutter-v2();
+    background-color: @osu-colour-d3;
+    color: @osu-colour-c1;
+    font-size: @font-size--title-small;
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+
   &--download {
     .page-width(20px);
     .default;
