Show header even in mobile and improve wiki buttons

--- a/resources/assets/less/bem/header-v4.less
+++ b/resources/assets/less/bem/header-v4.less
@@ -256,15 +256,8 @@
       background-color: @osu-colour-d5;
       font-size: @font-size--large;
 
-      display: none;
-
-      @media @desktop {
-        display: flex;
-      }
-
-      .@{_top}--artist & {
-        display: flex;
-      }
+      display: flex;
+      flex-wrap: wrap;
     }
 
     .@{_top}--chat & {
