--- a/resources/assets/less/bem-index.less
+++ b/resources/assets/less/bem-index.less
@@ -174,6 +174,7 @@
 @import "bem/game-mode-link";
 @import "bem/grid";
 @import "bem/grid-cell";
+@import "bem/header-buttons";
 @import "bem/header-nav-v4";
 @import "bem/header-search-box";
 @import "bem/header-v4";
