Less generic class name

--- a/resources/assets/less/bem-index.less
+++ b/resources/assets/less/bem-index.less
@@ -174,13 +174,13 @@
 @import "bem/game-mode-link";
 @import "bem/grid";
 @import "bem/grid-cell";
+@import "bem/grid-items";
 @import "bem/header-buttons";
 @import "bem/header-nav-v4";
 @import "bem/header-search-box";
 @import "bem/header-v4";
 @import "bem/icon-fancy";
 @import "bem/icon-stack";
-@import "bem/items";
 @import "bem/js-accordion";
 @import "bem/js-flash-border";
 @import "bem/js-react-modal";
