Update class name

--- a/resources/assets/less/bem/grid-items.less
+++ b/resources/assets/less/bem/grid-items.less
@@ -16,7 +16,7 @@
  *    along with osu!web.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-.items {
+.grid-items {
   display: flex;
   flex-wrap: wrap;
   margin: -10px;
