Adjust header height and menu
- move menu to below the header background
- reduce header height
- update profile/modding page to use common header component
- unhack game mode positioning

--- a/resources/assets/less/bem/game-mode.less
+++ b/resources/assets/less/bem/game-mode.less
@@ -21,9 +21,7 @@
   background-color: @osu-colour-b6;
 
   @media @desktop {
-    position: absolute;
-    right: @gutter-desktop;
-    top: 17px; // kind of centered in the page title area
+    margin-left: auto;
     background-color: transparent;
   }
 
