Fix game mode selector in mobile

--- a/resources/assets/less/bem/game-mode.less
+++ b/resources/assets/less/bem/game-mode.less
@@ -18,11 +18,11 @@
 
 .game-mode {
   line-height: normal;
-  background-color: @osu-colour-b6;
+  width: 100%;
 
   @media @desktop {
     margin-left: auto;
-    background-color: transparent;
+    width: auto;
   }
 
   &--beatmapsets {
