Realign artist portrait

--- a/resources/assets/less/bem/artist.less
+++ b/resources/assets/less/bem/artist.less
@@ -123,7 +123,7 @@
     margin: 10px auto;
 
     @media @desktop {
-      margin-top: -160px;
+      margin-top: -113px; // approximately aligned to inside of title bar
     }
 
     &--index {
