Smaller link on mobile

--- a/resources/assets/less/bem/game-mode-link.less
+++ b/resources/assets/less/bem/game-mode-link.less
@@ -19,13 +19,17 @@
 .game-mode-link {
   .default-text-shadow();
   .link-plain();
-  font-size: @font-size--title-small-4;
   color: @osu-colour-h1;
   padding: 0 10px;
+  font-size: @font-size--title-small;
 
   .link-hover({
     color: #fff;
   });
+
+  @media @desktop {
+    font-size: @font-size--title-small-4;
+  }
 
   &--active {
     font-weight: bold;
