Add text shadow for mobile download page

--- a/resources/assets/less/bem/download-page-header.less
+++ b/resources/assets/less/bem/download-page-header.less
@@ -17,6 +17,7 @@
  */
 
 .download-page-header {
+  .default-text-shadow();
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -27,6 +28,7 @@
   @media @desktop {
     margin-left: 90px;
     width: 180px;
+    text-shadow: none;
   }
 
   &__extra-link {
