--- a/resources/assets/less/bem/osu-page.less
+++ b/resources/assets/less/bem/osu-page.less
@@ -241,6 +241,10 @@
     .default-gutter-v2();
     padding-top: 20px;
     padding-bottom: 20px;
+
+    a {
+      .link-default();
+    }
   }
 
   &--generic-compact {
