separate legacy pm notification grouping from the rest

--- a/resources/assets/less/bem/notification-type-group.less
+++ b/resources/assets/less/bem/notification-type-group.less
@@ -52,6 +52,10 @@
   &__items {
     display: flex;
     flex-direction: column;
+
+    &--legacy_pm {
+      margin-bottom: 10px;
+    }
   }
 
   &__type {
