Update css color fade function

--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -16,6 +16,8 @@
  *    along with osu!web.  If not, see <http://www.gnu.org/licenses/>.
  */
 
+@plugin "../lib/osu-hsla";
+
 @node_root: "../../../node_modules";
 
 @import "@{node_root}/@fortawesome/fontawesome-free/less/fontawesome";
