--- a/resources/assets/less/bem/artist.less
+++ b/resources/assets/less/bem/artist.less
@@ -136,7 +136,7 @@
     }
 
     &--new {
-      box-shadow: 25px -10px 50px .osu-hsla(@osu-colour-orange-1, 0.2)[@hsla];
+      box-shadow: 25px -10px 50px osu-hsla(@osu-colour-orange-1, 0.2);
     }
   }
 
