--- a/resources/assets/less/bem/beatmapset-header.less
+++ b/resources/assets/less/bem/beatmapset-header.less
@@ -137,12 +137,12 @@
     .default-text-shadow;
 
     &--has-favourites {
-      background: .osu-hsla(@osu-colour-b6, 0.25)[@hsla];
+      background: osu-hsla(@osu-colour-b6, 0.25);
       padding: 2px 5px;
       .default-border-radius();
 
       &:hover {
-        background: .osu-hsla(@osu-colour-b6, 0.5)[@hsla];
+        background: osu-hsla(@osu-colour-b6, 0.5);
       }
     }
   }
