--- a/resources/assets/less/bem/counter-box.less
+++ b/resources/assets/less/bem/counter-box.less
@@ -41,7 +41,7 @@
   }
 
   .default-border-radius();
-  .border(.osu-hsla(@osu-colour-b5, 0.25)[@hsla]);
+  .border(osu-hsla(@osu-colour-b5, 0.25));
   background-color: @osu-colour-b5;
 
   color: @osu-colour-c1;
