--- a/resources/assets/less/bem/osu-switch-v2.less
+++ b/resources/assets/less/bem/osu-switch-v2.less
@@ -40,7 +40,7 @@
     width: 1.5em;
     height: 1.5em;
     display: flex;
-    color: .osu-hsla(@osu-colour-h1, 0.5)[@hsla];
+    color: osu-hsla(@osu-colour-h1, 0.5);
     border: 2px solid currentColor;
 
     &::after {
