--- a/resources/assets/less/bem/pagination-v2.less
+++ b/resources/assets/less/bem/pagination-v2.less
@@ -92,7 +92,7 @@
 
       // TODO: remove after forum/store restyle
       .@{_top}--light-bg & {
-        background-color: .osu-hsla(@osu-colour-l1, 0.2)[@hsla];
+        background-color: osu-hsla(@osu-colour-l1, 0.2);
       }
     }
   }
