--- a/resources/assets/less/bem/search-header.less
+++ b/resources/assets/less/bem/search-header.less
@@ -70,7 +70,7 @@
     font-weight: normal;
     min-width: 0;
     .default-border-radius();
-    background-color: .osu-hsla(@osu-colour-b6, 0.5)[@hsla];
+    background-color: osu-hsla(@osu-colour-b6, 0.5);
     display: flex;
 
     &::placeholder {
