--- a/resources/assets/less/bem/supporter-status.less
+++ b/resources/assets/less/bem/supporter-status.less
@@ -73,7 +73,7 @@
     height: 25px;
     margin-bottom: 10px;
     border-radius: 25px;
-    background: .osu-hsla(@osu-colour-b6, 0.8)[@hsla];
+    background: osu-hsla(@osu-colour-b6, 0.8);
     opacity: 0.5;
     overflow: hidden;
     .own-layer();
