--- a/resources/assets/less/functions.less
+++ b/resources/assets/less/functions.less
@@ -142,7 +142,7 @@
   &::before {
     .full-size();
     content: ' ';
-    background-image: linear-gradient(.osu-hsla(@osu-colour-b6, 0.3)[@hsla], .osu-hsla(@osu-colour-b6, 0.8)[@hsla]);
+    background-image: linear-gradient(osu-hsla(@osu-colour-b6, 0.3), osu-hsla(@osu-colour-b6, 0.8));
   }
 }
 
