--- a/resources/assets/less/select-options.less
+++ b/resources/assets/less/select-options.less
@@ -44,7 +44,7 @@
     &:hover {
       background-color: @osu-colour-b4;
       .@{this}__select & {
-        background-color: .osu-hsla(@osu-colour-b6, 0.6)[@hsla];
+        background-color: osu-hsla(@osu-colour-b6, 0.6);
       }
     }
 
@@ -59,7 +59,7 @@
     overflow: hidden;
 
     font-size: 15px;
-    background-color: .osu-hsla(@osu-colour-b6, 0.5)[@hsla];
+    background-color: osu-hsla(@osu-colour-b6, 0.5);
     box-shadow: 0 0 0 2px fade(#000, 25%);
   }
 
