--- a/resources/assets/less/bem/beatmap-discussion.less
+++ b/resources/assets/less/bem/beatmap-discussion.less
@@ -80,7 +80,7 @@
         content: ' ';
         width: 1px;
         right: 100%;
-        background-image: linear-gradient(to bottom, .osu-hsla(@osu-colour-b1, 0)[@hsla], @osu-colour-b1 50%, .osu-hsla(@osu-colour-b1, 0)[@hsla]);
+        background-image: linear-gradient(to bottom, osu-hsla(@osu-colour-b1, 0), @osu-colour-b1 50%, osu-hsla(@osu-colour-b1, 0));
       }
     }
   }
