--- a/resources/assets/less/bem/chat-message-group.less
+++ b/resources/assets/less/bem/chat-message-group.less
@@ -98,7 +98,7 @@
   }
 
   &__message-status {
-    color: .osu-hsla(@osu-colour-h1, 0.5)[@hsla];
+    color: osu-hsla(@osu-colour-h1, 0.5);
     margin-left: 10px;
 
     &--errored {
