--- a/resources/assets/less/bem/news-card.less
+++ b/resources/assets/less/bem/news-card.less
@@ -74,7 +74,7 @@
 
   &__overlay {
     .full-size-overflow();
-    background-image: linear-gradient(to bottom, transparent, .osu-hsla(@osu-colour-b6, 0.5)[@hsla]);
+    background-image: linear-gradient(to bottom, transparent, osu-hsla(@osu-colour-b6, 0.5));
 
     .@{_top}--hover & {
       &::after {
@@ -95,7 +95,7 @@
     .default-border-radius();
     font-size: @font-size--small;
     padding: 5px 10px;
-    background-color: .osu-hsla(@osu-colour-b6, 0.5)[@hsla];
+    background-color: osu-hsla(@osu-colour-b6, 0.5);
     align-self: flex-end;
     text-transform: uppercase;
     font-weight: 900;
