--- a/resources/assets/less/bem/supporter-perk-list-hero.less
+++ b/resources/assets/less/bem/supporter-perk-list-hero.less
@@ -51,7 +51,7 @@
 
   &__meta {
     width: 350px;
-    background-color: .osu-hsla(@osu-colour-b4, 0.95)[@hsla];
+    background-color: osu-hsla(@osu-colour-b4, 0.95);
     border-radius: 10px;
     padding: 10px;
     align-self: center;
