--- a/resources/assets/less/bem/user-list-popup.less
+++ b/resources/assets/less/bem/user-list-popup.less
@@ -24,7 +24,7 @@
 
   z-index: @z-index--user-card-tooltip !important;
 
-  background-color: .osu-hsla(@osu-colour-b6, 0.75)[@hsla];
+  background-color: osu-hsla(@osu-colour-b6, 0.75);
   color: white;
   font-size: @font-size--normal;
   max-width: ((@avatar-size + 2*@avatar-margin) * @columns) + 20px;
