Update header of store pages

--- a/resources/assets/less/bem-index.less
+++ b/resources/assets/less/bem-index.less
@@ -321,9 +321,9 @@
 @import "bem/sticky-header";
 @import "bem/sticky-header-breadcrumbs";
 @import "bem/store-cart-footer";
-@import "bem/store-header";
 @import "bem/store-logo";
 @import "bem/store-logo-text";
+@import "bem/store-notice";
 @import "bem/store-notification-requested-alert";
 @import "bem/store-order";
 @import "bem/store-order-item";
@@ -332,6 +332,7 @@
 @import "bem/store-slider";
 @import "bem/store-supporter-tag";
 @import "bem/store-text";
+@import "bem/store-xsolla";
 @import "bem/support-osu-popup";
 @import "bem/supporter";
 @import "bem/supporter-eyecatch";
