--- a/resources/assets/less/bem/btn-osu-big.less
+++ b/resources/assets/less/bem/btn-osu-big.less
@@ -327,6 +327,12 @@
     min-width: 70px;
   }
 
+  &--store-cart {
+    margin-left: auto;
+    padding: 5px 15px;
+    border-radius: 10000px;
+  }
+
   &--wrap-text {
     white-space: normal;
   }
