--- a/resources/assets/less/bem/header-v4.less
+++ b/resources/assets/less/bem/header-v4.less
@@ -19,6 +19,10 @@
 .header-v4 {
   @_top: header-v4;
 
+  @media print {
+    display: none;
+  }
+
   &__bg {
     margin: auto;
     width: 100%;
@@ -107,6 +111,11 @@
 
     .@{_top}--search & {
       .at2x-simple('/images/headers/search.jpg');
+    }
+
+    .@{_top}--store & {
+      opacity: 0.7;
+      .at2x-simple('/images/headers/store.png');
     }
 
     .@{_top}--supporter & {
