--- a/resources/assets/less/bem/header-v4.less
+++ b/resources/assets/less/bem/header-v4.less
@@ -241,6 +241,11 @@
       background-size: 75%;
     }
 
+    .@{_top}--store & {
+      background-image: url('/images/icons/store.svg');
+      background-size: 75%;
+    }
+
     .@{_top}--users & {
       background-image: url('/images/icons/profile.svg');
     }
