Hide cart button in mobile
There's already cart button on nav.

--- a/resources/assets/less/bem/btn-osu-big.less
+++ b/resources/assets/less/bem/btn-osu-big.less
@@ -331,6 +331,11 @@
     margin-left: auto;
     padding: 5px 15px;
     border-radius: 10000px;
+    display: none;
+
+    @media @desktop {
+      display: block;
+    }
   }
 
   &--wrap-text {
