--- a/resources/assets/less/bem/store-xsolla.less
+++ b/resources/assets/less/bem/store-xsolla.less
@@ -18,12 +18,13 @@
 
 .store-xsolla {
   align-items: center;
-  background-color: osu-hsla(@osu-colour-c1, 0.7);
-  color: @osu-colour-b6;
-  font-size: @font-size--normal;
+  background-color: osu-hsla(@osu-colour-b6, 0.5);
+  color: @osu-colour-c1;
+  font-size: @font-size--small-2;
+  font-family: var(--font-default-torus);
   margin-left: auto;
-  margin-right: -(@gutter-v2-desktop - 8px); // about the same as vertical margin (flex-centered)
   display: none;
+  text-align: right;
 
   @media @desktop {
     display: flex;
