Add dedicated header image section for contest

--- a/resources/assets/less/bem-index.less
+++ b/resources/assets/less/bem-index.less
@@ -245,6 +245,7 @@
 @import "bem/page-extra";
 @import "bem/page-extra-tabs";
 @import "bem/page-extra-tabs-before";
+@import "bem/page-image";
 @import "bem/page-mode";
 @import "bem/page-mode-link";
 @import "bem/page-nav";
