--- a/resources/assets/less/bem/header-v4.less
+++ b/resources/assets/less/bem/header-v4.less
@@ -28,10 +28,10 @@
     background-repeat: no-repeat;
     background-size: cover;
     opacity: 0.7;
-    .at2x-simple('/images/headers/generic.jpg');
     display: flex;
     justify-content: center;
     overflow: hidden;
+    .at2x-fallback(--header-bg, '/images/headers/generic.jpg');
 
     &::before {
       content: '';
@@ -65,7 +65,7 @@
     }
 
     .@{_top}--contests & {
-      .at2x-simple('/images/headers/contest.jpg');
+      .at2x-fallback(--header-bg, '/images/headers/contest.jpg');
     }
 
     .@{_top}--download & {
