Adjust mobile styles

--- a/resources/assets/less/bem/btn-osu-big.less
+++ b/resources/assets/less/bem/btn-osu-big.less
@@ -328,13 +328,14 @@
   }
 
   &--store-cart {
-    margin-left: auto;
     padding: 5px 15px;
     border-radius: 10000px;
-    display: none;
+    margin: 10px 0;
+    width: 100%;
 
     @media @desktop {
-      display: block;
+      margin: 0 0 0 auto;
+      width: auto;
     }
   }
 
