--- a/resources/assets/less/bem/header-nav-v4.less
+++ b/resources/assets/less/bem/header-nav-v4.less
@@ -27,7 +27,7 @@
   flex-wrap: wrap;
   margin: 0 -@_gutter-x;
   padding: (10px - @_gutter-y) 0;
-  font-size: @font-size--small;
+  font-size: @font-size--small-2;
 
   @media @desktop {
     font-size: @font-size--title-small;
