Allow flag display on all devices

--- a/resources/assets/less/bem/forum-post-info.less
+++ b/resources/assets/less/bem/forum-post-info.less
@@ -48,6 +48,11 @@
       }
     }
 
+    &--flag {
+      width: 100%;
+      display: block;
+    }
+
     &--group-badge {
       width: 100%;
       display: block;
