--- a/resources/assets/less/bem/contest.less
+++ b/resources/assets/less/bem/contest.less
@@ -19,7 +19,11 @@
 .contest {
   @_top: contest;
   background-color: @osu-colour-b5;
-  color: white;
+  color: @osu-colour-c1;
+
+  @media @desktop {
+    margin-bottom: 10px;
+  }
 
   &__description {
     .default-gutter-v2();
@@ -31,12 +35,11 @@
     font-weight: 300;
     padding-top: 20px;
     padding-bottom: 20px;
-    .default-box-shadow();
-
 
     > h1, h2, h3, h4, h5, h6 {
-      color: white;
+      color: @osu-colour-c1;
     }
+
     a {
       .link-default();
     }
