Dark input form

--- a/resources/assets/less/bem-index.less
+++ b/resources/assets/less/bem-index.less
@@ -143,6 +143,7 @@
 @import "bem/footer";
 @import "bem/form";
 @import "bem/form-select";
+@import "bem/form-text";
 @import "bem/forum-cover-admin-item";
 @import "bem/forum-cover-edit";
 @import "bem/forum-issue-icon";
