--- a/resources/assets/less/bem/form-text.less
+++ b/resources/assets/less/bem/form-text.less
@@ -16,50 +16,26 @@
  *    along with osu!web.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-.search-forum-options {
-  margin: 0;
-  padding: 10px 0;
-  display: flex;
-  flex-direction: column;
+.form-text {
+  .reset-input();
+  .default-border-radius();
+  padding: 5px;
+  width: 100%;
 
-  &__input-group {
-    display: block;
-    margin: 10px auto;
-    width: 100%;
+  background-color: @osu-colour-b6;
+  color: @osu-colour-c1;
+  font-size: @font-size--phone-input;
 
-    // reset global label style
-    text-transform: initial;
-    font-weight: initial;
-
-    @media @desktop {
-      width: 300px;
-    }
-
-    &--buttons {
-      display: flex;
-
-      @media @desktop {
-        padding-left: 40px;
-        padding-right: 40px;
-      }
-    }
+  @media @desktop {
+    font-size: @font-size--normal;
   }
 
-  &__label {
-    display: block;
-    margin-bottom: 5px;
-    font-weight: bold;
-    white-space: nowrap;
+  &--username-change {
+    padding: 10px;
+    margin: 5px 0;
 
     @media @desktop {
-      position: absolute;
-      display: flex;
-      align-items: center;
-      margin-right: 10px;
-      margin-bottom: 0;
-      top: 0;
-      right: 100%;
-      height: 100%;
+      font-size: @font-size--title-small;
     }
   }
 }
